- General statistics menu
- Building statistics menu
- Ware Statistics Menu
- Minor changes in barbarians conf files (Descnames mainly)
- added road textures
- Initial Version of game server. Only chatting.
- First version of barbarians tribe comitted
- Added training site/military patch by Raul Ferriz
- fixed "Worker Type 11 not found" bug
- new Tree Graphics from Wolfgang Weidner
- Added patch from Florian Falkner
  * new Option Dialog 
  * UIListselect can have now a selection-indicator
  * WatchWindow functionality is user selectable
- Windows can be minimized (middle mouse or CTRL+left mouse)
- fixed crash when using 32-bit fullscreen mode under win32

build-8:
- some ui ergonomics (new mapselect dialog, 
  double click function in listselects)
- resources and default resources support
- loading/saving of maps
- preliminary TT-Font support
- enhancing buildings support
- build animation support
- editor events/trigger
- editor player menu 
- editor bob tool

build-7:
- many new buildings
- improved in-game graphics
- improved in-game UI
- movement speed depends on slope of terrain
- improved watch window functionality
- improved the transport system
- added a 32 bit software renderer
- improved rendering quality
- added infrastructure for real-time in-game debugging and inspection
- various code cleanups and bug fixes

build-6:
- graphics reworked
- added functionality for the first few buildings
- reworked transport code
- added multiselect option for editors 'set texture'tool

build-5:
- added Immovable Tool in editor
- added Map_Loader support
- added support for multifield-fieldsels (for editor and to select areas)
- added height tools in the editor
- added item ware code
- added ware transportation (carriers stay on roads and can carry wares)
- construction sites are implemented
- added support for more (and most importantly: compressed) graphics formats

build-4:
- added Warehouse options window
- added ware requests

build-3: