@@ -1,3 +1,4 @@
+- Global Stock, Menue structure reworked
 - General statistics menu
 - Building statistics menu
 - Ware Statistics Menu
